--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,13 @@
     ],
     "require": {
         "composer/installers": "^2.0",
+        "drupal/blog": "^3.1",
         "drupal/core-composer-scaffold": "^10.5",
         "drupal/core-project-message": "^10.5",
         "drupal/core-recommended": "^10.5",
+        "drupal/radix": "^6.0",
+        "drupal/tara": "^11.0",
+        "drupal/zuvi": "^10.2",
         "drush/drush": "^12.5"
     },
     "conflict": {
